# haskell-torrent

./: CHANGELOG  README.md  torrent.cabal
cbits/: sha1.c  sha1.h
src/Data/: Torrent.hs
src/Data/Torrent/: SHA1.hs  Scrape.hs
